--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,20 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 .login-container {
     width: 360px;
     padding: 8% 0 0;
     margin: auto;
 }
 
-.login-container .form {
+.login-container .form,
+.login-container .loading {
     position: relative;
     background: #FFFFFF;
     max-width: 360px;
     margin: 0 auto 100px;
     padding: 45px;
+}
+
+.login-container .loading {
+    text-align: center;
 }
 
 .login-container .form .message {
