--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,24 @@
 .login-container .form .message a {
     color: rgb(0, 137, 161);
 }
+
+.title {
+    font-weight: 100;
+    font-size: 2em;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.title .icon {
+    float: right;
+    font-size: .8em;
+    text-decoration: none;
+}
+
+.title .icon:hover { cursor: pointer; }
+
+.floating-action-button {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+}
